...
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    // Username Box
    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
...
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    // Password Box
    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
...
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    // Login Button
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="LOGIN" />

    // Create Account Button
    <com.google.android.material.button.MaterialButton
        android:id="@+id/crtaccbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
