<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LemonChilliActivity"
    android:background="@drawable/wallpaper">

    // Title
    <TextView
        android:id="@+id/lemonchilli_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Lemon and Chilli\n Spaghetti "
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    // Shopping List Button
        <com.google.android.material.button.MaterialButton
            android:id="@+id/list_button"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/lemonchilli_title"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_list_alt_24"
            android:padding="20dp"
            android:text="Shopping List"
            android:textColor="@color/white" />

    // Prep List Button
    <com.google.android.material.button.MaterialButton
        android:id="@+id/prep_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_button"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_food_bank_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:text="What you need to know before you start..."
        android:textColor="@color/white" />

    // Quiz Button
    <com.google.android.material.button.MaterialButton
            android:id="@+id/quiz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prep_button"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_engineering_24"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="Test Your Knowledge..."
            android:textColor="@color/white" />

    // Recipe List Button
        <com.google.android.material.button.MaterialButton
            android:id="@+id/recipe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_button"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_menu_book_24"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:text="Let's Get Cooking"
            android:textColor="@color/white" />

    // Back Button
    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    // Logout Button
    <ImageButton
        android:id="@+id/logoutbutton"
        android:layout_width="82dp"
        android:layout_height="86dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="296dp"
        android:layout_marginTop="613dp"
        android:backgroundTint="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_logout_24" />

</RelativeLayout>
