...
        android:textColor="@color/black"
        android:textColorHint="@color/white" />

    // Pasta Button

    <ImageButton
        android:id="@+id/pastabtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/search_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
...
